--- a/index.html
+++ b/index.html
@@ -370,14 +370,14 @@
 <section class="team section-spacing text-center" id="team">
   <div class="container">
     <header class="section-header">
-      <h2>Meet The Team</h2>
-      <h3>Folks who created this awesome product</h3>
+      <h2>Nuestro Equipo</h2>
+      <h3>Creamos productos innovadores</h3>
     </header>
     <div class="row">
       <div class="col-sm-4">
         <div class="team-details">
-          <figure><img src="img/team-1.jpg" alt="Team Member" class="img-circle">
-            <figcaption class="img-circle">
+          <figure><img src="img/nosotros/francisco.jpg"  alt="Team Member" class="img-circle">
+            <figcaption class="img-circle" >
               <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit rutrum eleifend arcu. Lorem ipsum dolor sit amet consectetur.</p>
                 
@@ -394,14 +394,14 @@
             </figcaption>
           </figure>
           <div class="team-info">
-            <h4>John Doe</h4>
+            <h4>Francisco Roja</h4>
             <h5>UI/UX Designer</h5>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team-details">
-          <figure><img src="img/team-2.jpg" alt="Team Member"class="img-circle">
+          <figure><img src="img/nosotros/jorge.jpg"alt="Team Member"class="img-circle">
             <figcaption class="img-circle"> 
               <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit rutrum eleifend arcu. Lorem ipsum dolor sit amet consectetur.</p>
@@ -419,14 +419,14 @@
             </figcaption>
           </figure>
           <div class="team-info">
-            <h4>Jessica Doe</h4>
+            <h4>Jorge Gacitúa</h4>
             <h5>Front-end Programmer</h5>
           </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="team-details">
-          <figure><img src="img/team-3.jpg" alt="Team Member" class="img-circle">
+          <figure><img src="img/nosotros/hernan.jpg" class="img-circle">
             <figcaption class="img-circle">
               <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit rutrum eleifend arcu. Lorem ipsum dolor sit amet consectetur.</p>
@@ -444,7 +444,7 @@
             </figcaption>
           </figure>
           <div class="team-info">
-            <h4>Tom Doe</h4>
+            <h4>Hernan Fick</h4>
             <h5>Business Relations</h5>
           </div>
         </div>
@@ -475,8 +475,8 @@
 <section class="contact section-spacing text-center" id="contact">
   <div class="container">
     <header class="section-header">
-      <h2>Contact Us</h2>
-      <h3>Have any questions? Get in touch</h3>
+      <h2>Contactanos</h2>
+      <h3>Tienes alguna pregunta? Estaremos en contacto</h3>
     </header>
   </div>
   
