--- a/index.html
+++ b/index.html
@@ -396,6 +396,10 @@
           <div class="team-info">
             <h4>Francisco Roja</h4>
             <h5>UI/UX Designer</h5>
+             <blockquote>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
+                <cite>— Michael Doe, CEO Xyz Organisation</cite> 
+             </blockquote>
           </div>
         </div>
       </div>
@@ -421,10 +425,16 @@
           <div class="team-info">
             <h4>Jorge Gacitúa</h4>
             <h5>Front-end Programmer</h5>
+             <blockquote>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
+                <cite>— Michael Doe, CEO Xyz Organisation</cite> 
+             </blockquote>
           </div>
+
         </div>
       </div>
       <div class="col-sm-4">
+
         <div class="team-details">
           <figure><img src="img/nosotros/hernan.jpg" class="img-circle">
             <figcaption class="img-circle">
@@ -446,12 +456,17 @@
           <div class="team-info">
             <h4>Hernan Fick</h4>
             <h5>Business Relations</h5>
+             <blockquote>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
+                <cite>— Michael Doe, CEO Xyz Organisation</cite> 
+             </blockquote>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 <!--Team end--> 
 
