--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <div class="team-info">
             <h4>Francisco Roja</h4>
             <h5>UI/UX Designer</h5>
-             <blockquote>
+             <blockquote class="team-descricion">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
                 <cite>— Michael Doe, CEO Xyz Organisation</cite> 
              </blockquote>
@@ -425,7 +425,7 @@
           <div class="team-info">
             <h4>Jorge Gacitúa</h4>
             <h5>Front-end Programmer</h5>
-             <blockquote>
+             <blockquote class="team-descricion">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
                 <cite>— Michael Doe, CEO Xyz Organisation</cite> 
              </blockquote>
@@ -456,7 +456,7 @@
           <div class="team-info">
             <h4>Hernan Fick</h4>
             <h5>Business Relations</h5>
-             <blockquote>
+             <blockquote class="team-descricion">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
                 <cite>— Michael Doe, CEO Xyz Organisation</cite> 
              </blockquote>
