trabajando barra navegador y logo

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <a class="navbar-brand" href=""><img class="logo-nav" alt="logo" src="img/logo-nav.png"><img class="logo-head" alt="logo" src="img/logo-head.png"></a> </div>
       <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
         <ul class="nav navbar-nav nav-left">
-          <li><a href="#features">Features</a></li>
+          <li><a href="#features">Características</a></li>
           <!--<li><a href="#reviews">Reviews</a></li>-->
           <!--<li><a href="#pricing">Pricing</a></li>-->
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#team">Equipo</a></li>
+          <li><a href="#contact">Contactanos</a></li>
         </ul>
       </div>
     </div>
@@ -114,7 +114,7 @@
               <figure class="cbp-so-side cbp-so-side-left col-md-7 text-center" style="height: 518px;">
                 <img src="img/monitor.png" alt="feature">
               </figure>
-              <article class="cbp-so-side cbp-so-side-right">
+              <article class="cbp-so-side cbp-so-side-right" >
                 <h2>Sistema de información Georefenciada</h2>
                 <p>Desarrollamos un sistema capaz de mostrar de desplegar puntos de interés en dispositivos móviles a partir de la ubicación del usuario, pudiendo administrar estos desde una interfaz web. </p>
                 <ul>
