terminado con logo barra

--- a/index.html
+++ b/index.html
@@ -68,20 +68,19 @@
   <div class="container">
     <header class="section-header">
       <h2>¿QUÉ SABEMOS HACER?</h2>
-      <h3>Nuestra experiencia en las tecnologías de información</h3>
     </header>
     <div class="row">
       <div class="col-sm-4"> <img src="img/benefits-1.png" alt="benefits of product">
         <h4>Búsqueda Semantica</h4>
-        <p>Mejoramos los buscadores tradicionales enrriqueciendo los de inteligencia a la hora de hacer consultas en grandes volumenes de registros.</p>
+        <p>Mejoramos los buscadores tradicionales enriqueciendolos de inteligencia a la hora de hacer consultas en grandes volumenes de registros, apalicando tecnicas de mineria de texto.</p>
       </div>
       <div class="col-sm-4"> <img src="img/benefits-2.png" alt="benefits of product">
         <h4>Desarrollo de Software a la Medida</h4>
-        <p>Construimos sistemas en plataformas Web y Móviles acorde a sus necesidades del negocio a la vanguardia de las tecnologías existentes en el mercado.</p>
+        <p>Construimos sistemas en plataformas Web y Móviles de acuerdo a las necesidades de su negocio y a la vanguardia de las tecnologías existentes en el mercado.</p>
       </div>
       <div class="col-sm-4"> <img src="img/benefits-3.png" alt="benefits of product">
         <h4>Consultoría</h4>
-        <p>Lo asesoramos y le brindamos solución a sus ideas.</p>
+        <p>Nos enfocamos en prestar el asesoramiento necesario y brindar la mejor solución a sus ideas.</p>
       </div>
     </div>
   </div>
@@ -99,11 +98,10 @@
             <section class="cbp-so-section">
               <article class="cbp-so-side cbp-so-side-left">
                 <h2>Sistema de información Georefenciada</h2>
-                <p>Desarrollamos un sistema capaz de mostrar de desplegar puntos de interés en dispositivos móviles a partir de la ubicación del usuario, pudiendo administrar estos desde una interfaz web. </p>
+                <p>Desarrollamos un sistema capaz de desplegar puntos de interés en dispositivos móviles a partir de la ubicación del usuario, permitiendo administrar estos desde una interfaz web. </p>
                 <ul>
                   <li>Uso de tecnología de georeferencia</li>
-                  <li>Construcción de aplicaciones móviles</li>
-                  <li>Participante en torneos de innovación</li>
+                  <li>Construcción de aplicaciones móviles</li>   
                 </ul>
               </article>
               <figure class="cbp-so-side cbp-so-side-right col-md-7 text-center" style="height: 518px;">
@@ -206,7 +204,7 @@
             <h4>Jorge Gacitúa</h4>
             <h5>Front-end Programmer</h5>
              <blockquote class="team-descricion">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
+                <p>Titulado en ingenieria en informatica con mension en la gestion de informacion, con 2 años de experiencia en desarrollo web y movil orientado sistemas de gestion empresarial. </p>
                 <cite>— Michael Doe, CEO Xyz Organisation</cite> 
              </blockquote>
           </div>
