--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TEAM Soluciones</title>
-<meta name="description" content="Somos TEAM">
+<title>BRAINDEV Soluciones</title>
+<meta name="description" content="Somos BRAINDEV">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
         <a class="navbar-brand" href=""><img class="logo-nav" alt="logo" src="img/logo-nav.png"><img class="logo-head" alt="logo" src="img/logo-head.png"></a> </div>
       <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
         <ul class="nav navbar-nav nav-left">
-          <li><a href="#features">Características</a></li>
+          <li><a href="#features">¿Qué hacemos?</a></li>
           <!--<li><a href="#reviews">Reviews</a></li>-->
           <!--<li><a href="#pricing">Pricing</a></li>-->
           <li><a href="#team">Equipo</a></li>
@@ -101,7 +101,8 @@
                 <p>Desarrollamos un sistema capaz de desplegar puntos de interés en dispositivos móviles a partir de la ubicación del usuario, permitiendo administrar estos desde una interfaz web. </p>
                 <ul>
                   <li>Uso de tecnología de georeferencia</li>
-                  <li>Construcción de aplicaciones móviles</li>   
+                  <li>Construcción de aplicaciones móviles</li>
+                  <li>Participante en torneos de innovación</li>   
                 </ul>
               </article>
               <figure class="cbp-so-side cbp-so-side-right col-md-7 text-center" style="height: 518px;">
@@ -149,7 +150,7 @@
   <div class="container">
     <header class="section-header">
       <h2>Nuestro Equipo</h2>
-      <h3>Creamos productos innovadores</h3>
+      <h3>Los profesionales capaces de llevar a cabo sus ideas</h3>
     </header>
     <div class="row">
       <div class="col-sm-4">
@@ -172,11 +173,12 @@
             </figcaption>
           </figure>
           <div class="team-info">
-            <h4>Francisco Roja</h4>
-            <h5>UI/UX Designer</h5>
+            <h4>Francisco Rojas</h4>
+            <h5>Analista Desarrollador</h5><br/>            
              <blockquote class="team-descricion">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
-                <cite>— Michael Doe, CEO Xyz Organisation</cite> 
+                <p>Soy Ingeniero Informático Titulado con experiencia en desarrollos web y móviles para proyectos del gobierno y privados. 
+                Soy autodidacta, disciplinado y responsable</p>
+                <!--<cite>— Michael Doe, CEO Xyz Organisation</cite> -->
              </blockquote>
           </div>
         </div>
@@ -313,7 +315,7 @@
       <div class="col-md-4">
         <!--<p class="footer-links"><a href="">Terms of Use</a> <a href="">Privacy Policy</a></p>-->
       </div>
-      <div class="col-md-4"> <small>&copy; TEAM 2015.</small></div>
+      <div class="col-md-4"> <small>&copy; BRAINDEV 2015.</small></div>
       <div class="col-md-4"> 
         <!--social-->
         <!--
