--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <!--social-->
                 
                 <ul class="social">
-                  <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="mailto:fcorojas.ing@gmail.com" target="_top"><i class="fa fa-envelope"></i></a></li>
                    <li><a href="https://cl.linkedin.com/in/francisco-rojas-morales-26388a24" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
                 
@@ -291,7 +291,7 @@
   <div class="row">
     <div class="col-md-6 col-sm-11">
       <img class="logo-nav" alt="logo" src="img/contacto/phone_64px.png">
-      <p>+1 (222) 333 - 444</p>
+      <p>+56 9 5879 6712</p>
     </div>
     <div class="col-md-6 col-sm-11">
       <img class="logo-nav" alt="logo" src="img/contacto/envelope_64px.png">
