--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     </header>
     <div class="row">
       <div class="col-sm-4"> <img src="img/benefits-1.png" alt="benefits of product">
-        <h4>Búsqueda Semantica</h4>
-        <p>Mejoramos los buscadores tradicionales enriqueciendolos de inteligencia a la hora de hacer consultas en grandes volumenes de registros, aplicando tecnicas de mineria de texto.</p>
+        <h4>Inteligencia de Negocios</h4>
+        <p>Desarrollamos plataformas centradas en la generación de conocimiento mediante el tratamiento de grandes volumenes de información utilizando diversas técnicas para as entregar reportes sintetizados a tiempo.</p>
       </div>
       <div class="col-sm-4"> <img src="img/benefits-2.png" alt="benefits of product">
         <h4>Desarrollo de Software a la Medida</h4>
@@ -93,7 +93,7 @@
 
 
  
-<div class="features section-spacing">
+<div class="features section-spacing text-center">
   <div class="container"> 
     <header class="section-header">
       <h2>Tipos de sistemas</h2>
@@ -113,21 +113,20 @@
                 </ul>
               </article>
               <figure class="cbp-so-side cbp-so-side-right col-md-7 text-center" style="height: 518px;">
-                <img src="img/trabajos/sistemas_de_reportes.png" alt="feature">
+                <img src="img/trabajos/sistemas_de_reportes.png" alt="feature" style="max-width: 100%;">
               </figure>
             </section>
             <section class="cbp-so-section">
               <figure class="cbp-so-side cbp-so-side-left col-md-7 text-center" style="height: 518px;">
-                <img src="img/trabajos/geolocalizacion.png" alt="feature">
+                <img src="img/trabajos/geolocalizacion.png" alt="feature" style="max-width: 100%;">
               </figure>
               <article class="cbp-so-side cbp-so-side-right" >
                 <h2>Sistema de información Georefenciada</h2>
                 <p>Desarrollamos un sistema capaz de mostrar y desplegar puntos de interés en dispositivos móviles a partir de la ubicación del usuario, permitiendo administrar estos desde una interfaz web o movil. </p>
                 <ul>
-                  <li>Crear nuevos incidentes por completo</li>
-                  <li>Leer incidentes existentes</li>
-                  <li>Añadir detalles de los mismos o resolverlos</li>
-                  <li>Registro de la acción y quién la hizo</li>
+                 <li>Uso de tecnología de georeferencia</li>
+                  <li>Construcción de aplicaciones móviles</li>
+                  <li>Calculo de distancias y despliegue de puntos de interés</li>   
                 </ul>
               </article>
             </section>
@@ -136,22 +135,23 @@
                 <h2>Sistema de Seguimiento de Incidentes</h2>
                 <p>Es un paquete de software que administra y mantiene listas de incidentes, conforme son requeridos por una institución. Los sistemas de este tipo son comúnmente usados en la central de llamadas de servicio al cliente de una organización para crear, actualizar y resolver incidentes reportados por usuarios, o inclusive reportados por otros trabajadores de la organización.</p>
                 <ul>
-                  <li>Uso de tecnología de georeferencia</li>
-                  <li>Construcción de aplicaciones móviles</li>
-                  <li>Participante en torneos de innovación</li>   
+                  <li>Crear nuevos incidentes por completo</li>
+                  <li>Leer incidentes existentes</li>
+                  <li>Añadir detalles de los mismos o resolverlos</li>
+                  <li>Registro de la acción y quién la hizo</li>
                 </ul>
               </article>
               <figure class="cbp-so-side cbp-so-side-right col-md-7 text-center" style="height: 518px;">
-                <img src="img/trabajos/incidencias.png" alt="feature">
+                <img src="img/trabajos/incidencias.png" alt="feature" style="max-width: 100%;">
               </figure>
             </section>
               <section class="cbp-so-section">
               <figure class="cbp-so-side cbp-so-side-left col-md-7 text-center" style="height: 518px;">
-                <img src="img/trabajos/buscador.png" alt="feature">
+                <img src="img/trabajos/buscador.png" alt="feature" style="max-width: 100%;">
               </figure>
               <article class="cbp-so-side cbp-so-side-right" >
                 <h2>Buscador Semántico</h2>
-                <p>La búsqueda semántica es un proceso utilizado para mejorar las consultas en grande volumenes de datos mediante al uso de tecnicas avanzadas  de procesamiento de lenguaje natural  o semánticas para desambiguar las consultas y el texto de la web con la finalidad de encontrar los resultados más relevantes en relación a la demanda del usuario. Sintetizando, podríamos decir que se trata de un BUSCADOR INTELIGENTE.</p> 
+                <p>La búsqueda semántica es un proceso utilizado para mejorar las consultas en grande volumenes de datos mediante al uso de tecnicas avanzadas  de procesamiento de lenguaje natural o semánticas para desambiguar las consultas y el texto de la web con la finalidad de encontrar los resultados más relevantes en relación a la demanda del usuario. Sintetizando, podríamos decir que el producto es un BUSCADOR INTELIGENTE.</p> 
                 <ul>
                   <li>Se puede integrar con cualquier sistema remplazando la búsqueda tradicional</li>
                 </ul>
@@ -208,11 +208,11 @@
           </figure>
           <div class="team-info">
             <h4>Francisco Rojas</h4>
-            <h5>Analista Desarrollador</h5><br/>            
+            <h5>CEO & Founder</h5><br/>            
              <blockquote class="team-descricion">
                 <p>Soy Ingeniero Informático Titulado con experiencia en desarrollos web y móviles para proyectos del gobierno y privados. 
-                Soy autodidacta, disciplinado y responsable</p>
-                <cite>Ingeniero en informática</cite> 
+                Apasionado por la informática, autodidacta, disciplinado y responsable</p>
+                <!--<cite>Ingeniero en informática</cite> -->
              </blockquote>
           </div>
         </div>
@@ -241,7 +241,7 @@
             <h5>Ingeniero de Proyectos</h5><br/>
              <blockquote class="team-descricion">
                 <p>Titulado en ingeniería en informática con mención en la gestión de información, con 2 años de experiencia en desarrollo web y móvil orientado a sistemas de gestión empresarial, con interés de innovar investigando nuevas tecnologías para mejorar procesos del negocio. </p>
-                <cite>Ingeniero en informática</cite> 
+               <!--<cite>Ingeniero en informática</cite> -->
              </blockquote>
           </div>
 
@@ -268,7 +268,7 @@
             <h5>Business Relations</h5><br/>
              <blockquote class="team-descricion">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, repellat, voluptatem eveniet et illum itaque excepturi repudiandae officiis quibusdam deleniti. </p>
-                <cite>Ingeniero en informática</cite> 
+                <!--<cite>Ingeniero en informática</cite> -->
              </blockquote>
           </div>
         </div>
@@ -355,7 +355,7 @@
   
 </div>
 <footer class="site-footer section-spacing text-center">
-  <div class="container" style="background-image: url(../img/barra_baja.png);">
+  <div class="container">
     <div class="row">
       <div class="col-md-4">
         <!--<p class="footer-links"><a href="">Terms of Use</a> <a href="">Privacy Policy</a></p>-->
